Added Github tag
Added Github tag

--- a/config-server-client-production.properties
+++ b/config-server-client-production.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server client– Production environment configured in shared file
+msg = Hello world - this is from config server client– Production environment from GitHub
