Added Github tag
Added Github tag

--- a/second-client-production.properties
+++ b/second-client-production.properties
@@ -1,1 +1,1 @@
-second.client.name=Second Client from production profile file configured in shared file
+second.client.name=Second Client from production profile file from Github
